# Sistema-de-Locadora

./: .gitignore  README.md
back/: CMakeLists.txt
back/src/: main.cpp
back/src/handlers/: AluguelHandlers.cpp  AluguelHandlers.h  ClienteHandlers.cpp  ClienteHandlers.h  FilmeHandlers.cpp  FilmeHandlers.h  FuncionarioHandlers.cpp  FuncionarioHandlers.h  GeneroFilmeHandlers.cpp  GeneroFilmeHandlers.h  GeneroHandlers.cpp  GeneroHandlers.h  UsuarioHandlers.cpp  UsuarioHandlers.h
back/src/models/: Aluguel.cpp  Aluguel.h  Cliente.cpp  Cliente.h  Filme.cpp  Filme.h  Funcionario.cpp  Funcionario.h  Genero.cpp  Genero.h  GeneroFilme.cpp  GeneroFilme.h  Usuario.cpp  Usuario.h
back/src/pessoa classe base/: pessoa.cpp  pessoa.h
client/: README.md  index.html  tailwind.config.ts
client/.next/: trace
client/.next/cache/: .rscinfo
client/.next/server/: server-reference-manifest.js  server-reference-manifest.json
client/.next/server/chunks/: [root-of-the-server]__48b32c58._.js.map  node_modules_next_229848ed._.js.map
client/.next/static/chunks/: [root-of-the-server]__8ebb6d4b._.css.map  node_modules_@swc_helpers_cjs_00636ac3._.js.map  node_modules_next_dist_1a6ee436._.js.map  node_modules_next_dist_2ecbf5fa._.js.map  node_modules_next_dist_client_8f19e6fb._.js  node_modules_next_dist_client_8f19e6fb._.js.map  node_modules_next_dist_compiled_2ce9398a._.js.map  node_modules_next_dist_ea69acce._.js.map  src_app_globals_css_f9ee138c._.single.css.map
client/src/: App.tsx
client/src/components/: Header.tsx  MovieCard.tsx  MovieShelf.tsx
client/src/pages/: Index.tsx
(+10 files in other folders)
